# whenfs

./: .gitignore  Cargo.toml  LICENSE  README.md  compile.sh  dockerCompile.sh
src/: cache.rs  calendar.rs  fs.rs  main.rs  object.rs  store.rs
src/calendar/: gcal.rs
src/calendar/gcal/: api.rs  types.rs
