[package]
name = "when-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.73"
base64 = "0.21.5"
chrono = "0.4.30"
clap = { version = "4.5.11", features = ["derive"] }
ctor = "0.2.4"
dashmap = { version = "5.5.3", features = ["serde"] }
derive_more = "0.99.17"
fuser = { version = "0.13.0", features = ["serializable"] }
futures = "0.3.28"
libc = "0.2.147"
oauth2 = "4.4.1"
once_cell = "1.18.0"
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.188"
serde_json = "1.0.105"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.0"
uuid = { version = "1.5.0", features = ["v4"] }
yup-oauth2 = "8.3.0"
